
HORAS TRABALHADAS: 2h

==========
13/05/2009
==========

- Bugfixes e ajustes no model
- Implementacao de metodo para teste de login / publicacao no cadastro de blogs
- Ajustes no cadastro de blogs

HORAS TRABALHADAS: 8h

==========
14/05/2009
==========

- Inclusao de botao / funcionalidade DELETE na listagem de blogs
- Inclusao de botao / funcionalidade EDIT na listagem de blogs

HORAS TRABALHADAS: 4h

==========
15/05/2009
==========

- Bugfixes com javascript no IE

HORAS TRABALHADAS: 1h

==========
16/05/2009
==========

- Correcoes no cadastro de feeds
- Inclusao de opcao excluir feeds, blogs e entradas no queue (deleted)
- Inclusao de editar nome e desativar feeds
- Correcao do modulo aggregator do backend, google reader shared pode ser adicionado com sucesso

HORAS TRABALHADAS: 10h

==========
17/05/2009
==========

- Correcao de bug com magic_quotes
- Inclusao de recurso para importar feeds de arquivo OPML
- Bugfixes e melhorias na listagem de feeds
- Bugfixes no backend e dashboard

HORAS TRABALHADAS: 10h

==========
18/05/2009
==========

- Bugfixes no backend e dashboard
- Inclusao de metodo (profile/preference) para armazenar/recuperar preferencias do perfil

HORAS TRABALHADAS: 6h

==========
19/05/2009
==========

- Bugfixes no dashboard (IE)

HORAS TRABALHADAS: 4h

==========
20/05/2009
==========

- Ajustes na barra de queue
- Inclusao de paginacao na listagem de feeds
- bugfixes

HORAS TRABALHADAS: 8h

==========
21/05/2009
==========

- bugfixes
- inclusao de opcao modo (manual/automatico) no queue
- inclusao de opcao rodar (play/pause) no queue

HORAS TRABALHADAS: 6h

==========
21/05/2009
==========

- bugfixes
- alteracao do nome blotomate > postcanal
- simplificacao da estrutura de javascript

HORAS TRABALHADAS: 5h

==========
26/05/2009
==========

- bugfixes

HORAS TRABALHADAS: 6h

==========
27/05/2009
==========

- bugfixes

HORAS TRABALHADAS: 15h

==========
28/05/2009
==========

- bugfixes (dashboard)

HORAS TRABALHADAS: 6h