@@ -178,3 +178,11 @@ HORAS TRABALHADAS: 15h
 - bugfixes (dashboard)
 
 HORAS TRABALHADAS: 6h
+
+==========
+29/05/2009
+==========
+
+- implementacao de funcionalidades no queue
+
+HORAS TRABALHADAS: 2h
